# Autonomous-Assignment-Program-Manager

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .markdown-link-check.json  .mcp.json  .pre-commit-config.yaml  404.html  ADMIN_TESTS_SUMMARY.md  AGENTS.md  ARCHITECTURE.md  AUTH_TEST_GAP_MANIFEST.md  BACKEND_API_TESTING_CHECKLIST.md  BACKEND_ERROR_HANDLING_STANDARDS.md  BACKEND_LOGGING_STANDARDS.md  BACKEND_REPOSITORY_GUIDE.md  BACKEND_SERVICE_TESTING_PLAN.md  BATCH_ENDPOINTS_IMPLEMENTATION.md  BRANCH_CLEANUP.md  BRANCH_REBASE_REPORT.md  BUILD_QUALITY_SUMMARY.md  BURNOUT_FIRE_INDEX_SUMMARY.md  BURN_SESSION_36_SUMMARY.md  CELERY-CRASH.md  CELERY_CONFIGURATION_REPORT.md  CELERY_PRODUCTION_CHECKLIST.md  CELERY_QUICK_REFERENCE.md  CELERY_SETUP_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CHAT_SETUP.md  CLAUDE_CODE_MACOS_GUIDE.md  CLI_TOOLS_SUMMARY.md  CONCURRENT_TESTS_IMPLEMENTATION_SUMMARY.md  CONSTRAINTS_REFACTORING_SUMMARY.md  CONSTRAINT_REGISTRATION_REPORT.md  CONSTRAINT_REGISTRATION_SUMMARY.txt  CONSTRAINT_SYSTEM_ENHANCEMENTS.md  (+113 more)
backend/: .env.example  .pylintrc  ASYNC_MIGRATION_REPORT.txt  CLI_IMPLEMENTATION_SUMMARY.md  DASHBOARD_IMPLEMENTATION_SUMMARY.md  Dockerfile  Dockerfile.local  FACULTY_AUDIT_PROMPT.md  PROCESS_CAPABILITY_USAGE.md  QUICK_VERIFICATION.sh  RAG_SERVICE_IMPLEMENTATION_SUMMARY.md  RBAC_SECURITY_FIXES.md  README_CLI.md  SCHEDULER_OPS_INTEGRATION.md  SESSION_44_MIGRATION_SUMMARY.md  SESSION_44_RESULTS.txt  SKIPPED_TESTS_INVENTORY.csv  TEST_COVERAGE_ANALYSIS.md  TEST_COVERAGE_SUMMARY.md  TEST_IMPLEMENTATION_CHECKLIST.md  alembic.ini  audit_async_routes.py  create_test_users.py  demo_process_capability.py  docker-entrypoint.sh  generate_test_data.py  logging_config.py  migrate_route_to_async.py  pyproject.toml  pytest.ini  remediate_block12.py  requirements.txt  run_compound_stress.py  run_pcs_simulation.py  schema.sql  seed_constraints.py  seed_game_theory.py  seed_notifications.py  seed_resilience.py  seed_swaps.py  (+2 more)
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py  002_add_absence_blocking_and_person_capacity.py  003_add_acgme_audit_fields.py  004773c4ac06_add_graduation_requirements_table.py  004_add_resilience_tables.py  (+136 more)
backend/app/: __init__.py  main.py
backend/benchmarks/: __init__.py  __main__.py  acgme_validation_bench.py  concurrent_requests_bench.py  database_query_bench.py  memory_usage_bench.py  resilience_calculation_bench.py  schedule_generation_bench.py  startup_time_bench.py  swap_matching_bench.py
backend/cli/: __init__.py  config.py  main.py
backend/docs/: RAG_SERVICE.md
backend/examples/: rag_usage_example.py  spc_monitoring_example.py  stability_metrics_demo.py
backend/experimental/: TODO_IMPLEMENTATION_SUMMARY.md  __init__.py  harness.py  test_implementations.py
backend/profiling/: __init__.py  flame_graph_generator.py  profile_api_endpoints.py  profile_background_tasks.py  profile_queries.py  profile_scheduler.py
backend/scripts/: analyze_schedule.py  audit_constraints.py  backfill_external_rotation_saturday_off.py  backfill_weekly_patterns_saturday_off.py  constraint_manager_cli.py  export_openapi.py  export_sanitized_metrics.py  generate_fat_template.py  import_block_assignments.py  migration_utils.py  seed_antigravity.py  seed_data.py  validate_rosetta_complete.py  validate_xlsx_vs_rosetta.py
backend/tests/: TEST_EXPANSION_SUMMARY.md  TEST_SUMMARY.md  __init__.py  conftest.py  factories.py  test_absence_overlap_service.py  test_absences_routes.py  test_academic_blocks_routes.py  test_access_matrix.py  test_analytics_routes.py  test_api.py  test_approve_reject_context.py  test_assignments_api.py  test_assignments_routes.py  test_async_utils.py  test_audience_auth.py  test_audience_tokens_routes.py  test_audit_routes.py  test_audit_service.py  test_auth_initialization.py  test_auth_routes.py  test_batch_operations.py  test_batch_routes.py  test_behavioral_network.py  test_blocks_routes.py  test_cache.py  test_calendar_export.py  test_calendar_routes.py  test_call_assignments_routes.py  test_call_assignments_routes_api.py  test_call_equity_constraints.py  test_call_equity_ytd.py  test_call_generation.py  test_certifications_routes.py  test_changelog.py  test_cli_swap_analyzer.py  test_concurrent_swaps.py  test_conflict_alert.py  test_conflict_alert_service.py  test_conflict_auto_detector.py  (+140 more)
mcp-server/: .env.example  AGENT_IMPLEMENTATION_SUMMARY.md  API_CLIENT_INTEGRATION_STATUS.md  API_CLIENT_SUMMARY.md  ASYNC_TOOLS.md  ASYNC_TOOLS_QUICK_REFERENCE.md  BURN_SESSION_24_REPORT.txt  DOMAIN_CONTEXT_USAGE_EXAMPLES.md  Dockerfile  ERROR_HANDLING_SUMMARY.md  GAME_THEORY_QUICKSTART.md  HOPFIELD_TOOLS.md  IMPLEMENTATION_SUMMARY.md  MCP_FASTMCP_UPGRADE_NEEDED.md  MCP_TOOL_IMPLEMENTATION_SUMMARY.md  README.md  README_IDE_SETUP.md  RESILIENCE_MCP_INTEGRATION.md  STREAM_9_COMPLETION_REPORT.md  VAR_IMPLEMENTATION_SUMMARY.md  pyproject.toml  test_ecological_dynamics.py
mcp-server/docs/: AGENT_SERVER.md  EXOTIC_RESEARCH_TOOLS.md  FOURIER_ANALYSIS_TOOLS.md  GAME_THEORY_IMPLEMENTATION_SUMMARY.md  GAME_THEORY_TOOLS.md  MCP_RESOURCES_REFERENCE.md  MCP_TOOLS_REFERENCE.md  PLACEHOLDER_IMPLEMENTATIONS.md  README.md  VAR_RISK_ANALYSIS.md  deployment-tools.md  error-handling.md
mcp-server/examples/: __init__.py  agent_integration_example.py  async_task_example.py  deployment_workflow_example.py  error_handling_example.py  game_theory_example.py
mcp-server/tests/: __init__.py  conftest.py  test_api_client.py  test_aro_tools.py  test_async_tools.py  test_composite_tools.py  test_constraint_tools.py  test_early_warning_tools.py  test_ecological_dynamics_tools.py  test_empirical_tools.py  test_epidemiology_tools.py  test_error_handling.py  test_excel_tools.py  test_fourier_analysis_tools.py  test_game_theory_tools.py  test_hopfield_tools.py  test_kalman_filter_tools.py  test_optimization_tools.py  test_resilience_integration.py  test_server.py  test_spawn_agent_tool.py  test_validate_schedule.py  test_var_risk_tools.py  test_var_shapley_mcp_tools.py
(+6620 files in other folders)
