[project]
name = "residency-scheduler"
version = "1.0.0"
description = "Medical residency scheduling system with ACGME compliance"
readme = "README.md"
requires-python = ">=3.11"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | alembic/versions
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "alembic/versions",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults (needed for FastAPI Depends)
    "B904",   # raise without from inside except (sometimes intentional)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841", "ARG", "B007", "E402"]  # Allow unused vars, args, loop vars, and late imports in tests
"app/api/routes/*" = ["ARG001"]  # FastAPI dependency injection requires unused args
"alembic/env.py" = ["F401"]  # Model imports needed for metadata registration
"app/analytics/*" = ["F841", "B007", "F402"]  # Analytics engines may have intermediate vars and loop shadows
"app/scheduling/*" = ["E402", "SIM102", "B019"]  # Complex module with late imports, nested conditionals, and caching
"app/resilience/*" = ["E402", "B007", "SIM102"]  # Complex module with late imports
"app/notifications/*" = ["E402"]  # Notification service has config-dependent imports
"app/maintenance/*" = ["F401", "E402", "B019", "SIM102"]  # Maintenance module has optional imports, caching, nested ifs
"app/models/*" = ["E402"]  # Models may have late imports for type hints
"app/services/*" = ["E402", "F401", "SIM102"]  # Services have complex imports
"app/validators/*" = ["F401"]  # Validators may have conditional imports

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "ortools.*",
    "passlib.*",
    "jose.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = [
    "-v",
    "--strict-markers",
    "-ra",
]
markers = [
    "acgme: marks tests for ACGME compliance validation",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 70
show_missing = true
