[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "residency-scheduler"
version = "1.0.0"
description = "Medical residency scheduling system with ACGME compliance"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
scheduler-cli = "cli.main:app"

[project.optional-dependencies]
cli = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | alembic/versions
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "alembic/versions",
]

[tool.ruff.lint]
select = [
    "E",      ***REMOVED*** pycodestyle errors
    "W",      ***REMOVED*** pycodestyle warnings
    "F",      ***REMOVED*** Pyflakes
    ***REMOVED*** "I",    ***REMOVED*** isort - disabled in ruff, using standalone isort to avoid conflicts
    "B",      ***REMOVED*** flake8-bugbear
    "C4",     ***REMOVED*** flake8-comprehensions
    "UP",     ***REMOVED*** pyupgrade
    "SIM",    ***REMOVED*** flake8-simplify
]
ignore = [
    "E501",   ***REMOVED*** line too long (handled by black)
    "B008",   ***REMOVED*** do not perform function calls in argument defaults (needed for FastAPI Depends)
    "B904",   ***REMOVED*** raise without from inside except (sometimes intentional)
    "SIM102", ***REMOVED*** nested if - sometimes more readable
    "SIM105", ***REMOVED*** contextlib.suppress - try/except/pass is often clearer
    "SIM103", ***REMOVED*** return expression directly - explicit returns are clearer
    "SIM108", ***REMOVED*** ternary operator - if/else is often more readable
    "SIM118", ***REMOVED*** key in dict vs dict.keys() - negligible difference
    "SIM110", ***REMOVED*** use any() - explicit loops are often clearer
    "SIM113", ***REMOVED*** enumerate - sometimes explicit counter is clearer
    "SIM116", ***REMOVED*** use dict instead of if-elif - explicit branching is clearer
    "SIM117", ***REMOVED*** multiple with statements - sometimes clearer separated
    "B905",   ***REMOVED*** zip strict - Python <3.10 compatibility
    "UP035",  ***REMOVED*** deprecated imports - will fix gradually
    "UP028",  ***REMOVED*** yield in for loop - sometimes needed for clarity
    "C414",   ***REMOVED*** unnecessary list call - sometimes needed for clarity
    "C416",   ***REMOVED*** unnecessary comprehension - sometimes clearer
    "E712",   ***REMOVED*** comparison to True/False - needed for SQLAlchemy boolean columns
    "B007",   ***REMOVED*** unused loop variable - often needed for unpacking
    "B024",   ***REMOVED*** abstract base class without abstract methods - design choice
    "B027",   ***REMOVED*** empty method in abstract - design choice
    "B039",   ***REMOVED*** mutable default - false positives with Pydantic
    "E721",   ***REMOVED*** type comparison - sometimes needed
    "E722",   ***REMOVED*** bare except - sometimes intentional
    "E741",   ***REMOVED*** ambiguous variable name - single letter vars are fine in comprehensions
    "F402",   ***REMOVED*** import shadowing - sometimes intentional
    "F811",   ***REMOVED*** redefinition - sometimes intentional for monkey patching
    "F841",   ***REMOVED*** local variable unused - often intermediate calculations
    "C401",   ***REMOVED*** unnecessary generator - style preference
    "B004",   ***REMOVED*** hasattr __call__ - sometimes needed for compatibility
    "F401",   ***REMOVED*** imported but unused - often needed for re-exports or type hints
    "E402",   ***REMOVED*** module level import not at top - needed for conditional imports
    "F821",   ***REMOVED*** undefined name - sometimes needed for forward references or placeholders
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "F405"]  ***REMOVED*** __init__.py files use star imports for re-exports
"tests/*" = ["F841", "ARG", "B007", "E402", "B017", "B905", "E741", "F811", "SIM108", "SIM117", "F401", "B024", "E712", "C401", "SIM110"]  ***REMOVED*** Tests have many patterns that are acceptable
"app/api/routes/*" = ["ARG001", "E402", "F841", "B007", "E712", "C401"]  ***REMOVED*** FastAPI routes: unused args/vars, late imports, boolean comparisons, comprehensions
"alembic/env.py" = ["F401"]  ***REMOVED*** Model imports needed for metadata registration
"app/analytics/*" = ["F841", "B007", "F402", "C401", "E712"]  ***REMOVED*** Analytics engines may have intermediate vars and loop shadows
"app/scheduling/*" = ["E402", "B019", "F841", "B007"]  ***REMOVED*** Complex module with late imports and caching
"app/resilience/*" = ["E402", "B007", "F841", "C401"]  ***REMOVED*** Complex module with late imports
"app/notifications/*" = ["E402", "F841"]  ***REMOVED*** Notification service has config-dependent imports
"app/maintenance/*" = ["F401", "E402", "B019", "F841", "B007"]  ***REMOVED*** Maintenance module has optional imports and caching
"app/models/*" = ["E402", "F841"]  ***REMOVED*** Models may have late imports for type hints
"app/services/*" = ["E402", "F401", "F841", "B007"]  ***REMOVED*** Services have complex imports
"app/validators/*" = ["F401", "F841"]  ***REMOVED*** Validators may have conditional imports
"app/audit/*" = ["F841", "B007", "E712"]  ***REMOVED*** Audit module has intermediate variables
"app/auth/*" = ["F841", "C401", "C416"]  ***REMOVED*** Auth module patterns
"app/core/*" = ["F841", "E402"]  ***REMOVED*** Core module patterns
"app/events/*" = ["F841", "B007"]  ***REMOVED*** Events module patterns
"app/outbox/*" = ["F841"]  ***REMOVED*** Outbox module patterns
"app/autonomous/*" = ["F821", "F841"]  ***REMOVED*** Autonomous module has placeholder imports
"app/metering/*" = ["F821", "F841"]  ***REMOVED*** Metering module has placeholder variables
"app/telemetry/*" = ["F821", "F841"]  ***REMOVED*** Telemetry module has placeholder functions
"app/schemas/*" = ["F841", "B007"]  ***REMOVED*** Schema module patterns
"app/controllers/*" = ["F841", "B007"]  ***REMOVED*** Controller module patterns
"app/db/*" = ["F841", "E402"]  ***REMOVED*** Database module patterns

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "ortools.*",
    "passlib.*",
    "jose.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = [
    "-v",
    "--strict-markers",
    "-ra",
]
markers = [
    "acgme: marks tests for ACGME compliance validation",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 70
show_missing = true

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"]
skip = [".git", ".mypy_cache", ".ruff_cache", ".venv", "venv", "__pycache__", "alembic/versions"]
skip_gitignore = true
