[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "residency-scheduler"
version = "1.0.0"
description = "Medical residency scheduling system with ACGME compliance"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
scheduler-cli = "cli.main:app"

[project.optional-dependencies]
cli = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | alembic/versions
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "alembic/versions",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    # "I",    # isort - disabled in ruff, using standalone isort to avoid conflicts
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults (needed for FastAPI Depends)
    "B904",   # raise without from inside except (sometimes intentional)
    "SIM102", # nested if - sometimes more readable
    "SIM105", # contextlib.suppress - try/except/pass is often clearer
    "SIM103", # return expression directly - explicit returns are clearer
    "SIM108", # ternary operator - if/else is often more readable
    "SIM118", # key in dict vs dict.keys() - negligible difference
    "SIM110", # use any() - explicit loops are often clearer
    "SIM113", # enumerate - sometimes explicit counter is clearer
    "SIM116", # use dict instead of if-elif - explicit branching is clearer
    "SIM117", # multiple with statements - sometimes clearer separated
    "B905",   # zip strict - Python <3.10 compatibility
    "UP035",  # deprecated imports - will fix gradually
    "UP028",  # yield in for loop - sometimes needed for clarity
    "C414",   # unnecessary list call - sometimes needed for clarity
    "C416",   # unnecessary comprehension - sometimes clearer
    "E712",   # comparison to True/False - needed for SQLAlchemy boolean columns
    "B007",   # unused loop variable - often needed for unpacking
    "B024",   # abstract base class without abstract methods - design choice
    "B027",   # empty method in abstract - design choice
    "B039",   # mutable default - false positives with Pydantic
    "E721",   # type comparison - sometimes needed
    "E722",   # bare except - sometimes intentional
    "E741",   # ambiguous variable name - single letter vars are fine in comprehensions
    "F402",   # import shadowing - sometimes intentional
    "F811",   # redefinition - sometimes intentional for monkey patching
    "F841",   # local variable unused - often intermediate calculations
    "C401",   # unnecessary generator - style preference
    "B004",   # hasattr __call__ - sometimes needed for compatibility
    "F401",   # imported but unused - often needed for re-exports or type hints
    "E402",   # module level import not at top - needed for conditional imports
    "F821",   # undefined name - sometimes needed for forward references or placeholders
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "F405"]  # __init__.py files use star imports for re-exports
"tests/*" = ["F841", "ARG", "B007", "E402", "B017", "B905", "E741", "F811", "SIM108", "SIM117", "F401", "B024", "E712", "C401", "SIM110"]  # Tests have many patterns that are acceptable
"app/api/routes/*" = ["ARG001", "E402", "F841", "B007", "E712", "C401"]  # FastAPI routes: unused args/vars, late imports, boolean comparisons, comprehensions
"alembic/env.py" = ["F401"]  # Model imports needed for metadata registration
"app/analytics/*" = ["F841", "B007", "F402", "C401", "E712"]  # Analytics engines may have intermediate vars and loop shadows
"app/scheduling/*" = ["E402", "B019", "F841", "B007"]  # Complex module with late imports and caching
"app/resilience/*" = ["E402", "B007", "F841", "C401"]  # Complex module with late imports
"app/notifications/*" = ["E402", "F841"]  # Notification service has config-dependent imports
"app/maintenance/*" = ["F401", "E402", "B019", "F841", "B007"]  # Maintenance module has optional imports and caching
"app/models/*" = ["E402", "F841"]  # Models may have late imports for type hints
"app/services/*" = ["E402", "F401", "F841", "B007"]  # Services have complex imports
"app/validators/*" = ["F401", "F841"]  # Validators may have conditional imports
"app/audit/*" = ["F841", "B007", "E712"]  # Audit module has intermediate variables
"app/auth/*" = ["F841", "C401", "C416"]  # Auth module patterns
"app/core/*" = ["F841", "E402"]  # Core module patterns
"app/events/*" = ["F841", "B007"]  # Events module patterns
"app/outbox/*" = ["F841"]  # Outbox module patterns
"app/autonomous/*" = ["F821", "F841"]  # Autonomous module has placeholder imports
"app/metering/*" = ["F821", "F841"]  # Metering module has placeholder variables
"app/telemetry/*" = ["F821", "F841"]  # Telemetry module has placeholder functions
"app/schemas/*" = ["F841", "B007"]  # Schema module patterns
"app/controllers/*" = ["F841", "B007"]  # Controller module patterns
"app/db/*" = ["F841", "E402"]  # Database module patterns

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
# Relaxed config: catch actual bugs, not annotation noise
# Ruff handles missing annotations; mypy catches type mismatches
warn_return_any = false           # Often intentional (generic wrappers)
warn_unused_ignores = false       # Cleanup noise
disallow_untyped_defs = false     # Ruff handles this
disallow_incomplete_defs = false  # Ruff handles this
check_untyped_defs = true         # Still check bodies of untyped functions
strict_optional = true            # None checking is valuable
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# Disable low-value error codes
disable_error_code = [
    "var-annotated",    # "Need type annotation for variable" - noise
    "no-untyped-call",  # Calling untyped functions - noise
]

[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "ortools.*",
    "passlib.*",
    "jose.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = [
    "-v",
    "--strict-markers",
    "-ra",
]
markers = [
    "acgme: marks tests for ACGME compliance validation",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 70
show_missing = true

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"]
skip = [".git", ".mypy_cache", ".ruff_cache", ".venv", "venv", "__pycache__", "alembic/versions"]
skip_gitignore = true

[tool.bandit]
exclude_dirs = ["tests", "venv", "alembic", "benchmarks", "examples", "experimental"]
targets = ["app"]

[tool.bandit.assert_used]
skips = ["*_test.py", "*test_*.py"]
